--- a/turtle_racing_answers_ipywidgets.ipynb
+++ b/turtle_racing_answers_ipywidgets.ipynb
@@ -50,9 +50,17 @@
         "\n",
         "### Discussion\n",
         "\n",
-        "There are many ways to write this verison.  You may look at this and perhaps have different functions or structure the widgets differently.\n",
+        "### Discussion\n",
         "\n",
-        "> Notice how I use the *shape* variable to change the text on the buttons and winning message."
+        "This notebook is the implementation of the design of the turtle-race program. It is expected that you would do a design before implementing. There are many ways to design this program. You may look at this and perhaps have different functions or structure the input differently.\n",
+        "\n",
+        "Could you use Colab forms to select the turtle colour from a drop-down? What about setting the shape or the step multiplier? Is there any other variable you could use to set up the game? Could we give each turtle a name? Would that make it more fun?\n",
+        "\n",
+        "> Notice how I use the *shape* variable to change the text on the buttons and winning message.\n",
+        "\n",
+        "## Reference\n",
+        "\n",
+        "This is a Google Colab notebook for drawing classic Turtle figures. It's also compatible with Jupyter Lab notebooks. These notebooks have been adapted from [The Beginner's Guide to Python Turtle](https://realpython.com/beginners-guide-python-turtle/) to use [ColabTurtlePlus](https://pypi.org/project/ColabTurtlePlus/).\n"
       ],
       "metadata": {
         "id": "YkweyISTnQGh"
