added save to file

--- a/turtle_revision.ipynb
+++ b/turtle_revision.ipynb
@@ -494,6 +494,37 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Lets save the image to a file\n",
+        "\n",
+        "The graphics are drawn using SVG tags. The SVG commands can be printed on screen (after the drawing is completed) or saved to a file for use in a program.  The following cell will save the canvas to a file called `SVGimage.svg`"
+      ],
+      "metadata": {
+        "id": "_MYJ0xSQt1Wm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "turtle.saveSVG(turtle=True)"
+      ],
+      "metadata": {
+        "id": "mStr_qhNt2C1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now download `SVGimage.svg` and include in what ever program you like."
+      ],
+      "metadata": {
+        "id": "QfaYA8hOuLJU"
+      }
     }
   ]
 }
